fix: mobile layout issue

--- a/src/views/HomeView/HomeView.module.css
+++ b/src/views/HomeView/HomeView.module.css
@@ -45,7 +45,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  column-gap: 1rem;
+  column-gap: 6px;
   @media screen and (min-width: 768px) {
     column-gap: 2rem;
   }
